--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "12.0.1",
+    "next-mdx-remote": "^3.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
