--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^3.0.7",
+    "next-plausible": "^3.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
