--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^3.0.7",
     "next-plausible": "^3.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next-plugin-preact": "^3.0.6",
+    "preact": "^10.5.15",
+    "preact-render-to-string": "^5.1.19",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
+    "react-ssr-prepass": "npm:preact-ssr-prepass",
+    "sharp": "^0.29.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
