--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
     "react-ssr-prepass": "npm:preact-ssr-prepass",
+    "react-twemoji": "^0.3.0",
     "sharp": "^0.29.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
+    "@types/twemoji": "^12.1.2",
     "autoprefixer": "^10.4.0",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
