--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "preact-render-to-string": "^5.1.19",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-ssr-prepass": "npm:preact-ssr-prepass",
     "react-twemoji": "^0.3.0",
     "sharp": "^0.29.2"
@@ -33,6 +34,7 @@
     "@svgr/webpack": "^5.5.0",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
+    "@types/react-mailchimp-subscribe": "^2.1.1",
     "@types/twemoji": "^12.1.2",
     "autoprefixer": "^10.4.0",
     "eslint": "7",
