--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sharp": "^0.29.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.0.0-beta.4",
     "@svgr/webpack": "^5.5.0",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
