--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "date-fns": "^2.25.0",
     "gray-matter": "^4.0.3",
-    "next": "12.0.1",
+    "next": "^11",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^3.0.7",
     "next-plausible": "^3.0.1",
@@ -31,7 +31,6 @@
     "sharp": "^0.29.2"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.0.0-beta.4",
     "@svgr/webpack": "^5.5.0",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
