--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
+    "@types/mdx-js__react": "^1.5.5",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
     "@types/react-mailchimp-subscribe": "^2.1.1",
