--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-plugin-preact": "^3.0.6",
     "preact": "^10.5.15",
     "preact-render-to-string": "^5.1.19",
+    "prismjs": "^1.25.0",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
     "react-mailchimp-subscribe": "^2.1.3",
@@ -34,10 +35,12 @@
     "@svgr/webpack": "^5.5.0",
     "@types/mdx-js__react": "^1.5.5",
     "@types/node": "16.11.6",
+    "@types/prismjs": "^1.16.6",
     "@types/react": "17.0.33",
     "@types/react-mailchimp-subscribe": "^2.1.1",
     "@types/twemoji": "^12.1.2",
     "autoprefixer": "^10.4.0",
+    "babel-plugin-prismjs": "^2.1.0",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
     "postcss": "^8.3.11",
